[tool.poetry]
name = "aio-pool"
version = "0.2.0"
description = "Extending Python's process pool to support async functions."
authors = ["Itay Azolay <itayazolay@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
repository = "https://github.com/Itayazolay/aio-pool"
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Topic :: Software Development :: Libraries",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Framework :: AsyncIO"
]

[tool.poetry.dependencies]
python = "^3.6"

[tool.poetry.dev-dependencies]
uvloop = { version="^0", optional=true, markers = "sys_platform != 'win32'"}

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
